Change input type for mobile

--- a/index.html
+++ b/index.html
@@ -37,28 +37,28 @@
           <li class='listRow'>
             <div data-role='fieldcontain'>
               <label for='priceValue' class='fieldName'>樓價</label>
-              <input type='text' data-mini='true'  class='fieldValue' id='priceValue' placeholder='樓宇價值' value='300'>
+              <input type='tel' data-mini='true'  class='fieldValue' id='priceValue' placeholder='樓宇價值' value='300'>
               <label  class='fieldUnit'>萬</label>
             </div>
           </li>
           <li class='listRow'>
             <div data-role='fieldcontain'>
               <label for='loanRatio' class='fieldName'>按揭成數</label>
-              <input type='text' data-mini='true' class='fieldValue' id='loanRatio' placeholder='按揭成數' value ='70'>
+              <input type='tel' data-mini='true' class='fieldValue' id='loanRatio' placeholder='按揭成數' value ='70'>
               <label class='fieldUnit'>%</label>
             </div>  
           </li>
           <li class='listRow'>
             <div data-role='fieldcontain'>
               <label for='loanPeriod' class='fieldName'>按揭年期</label>
-              <input type='text' data-mini='true' class='fieldValue' id='loanPeriod' placeholder='按揭年期' value = '20'>
+              <input type='tel' data-mini='true' class='fieldValue' id='loanPeriod' placeholder='按揭年期' value = '20'>
               <label class='fieldUnit'>年</label>
             </div>
           </li>
           <li class='listRow'>
             <div data-role='fieldcontain'>
               <label for='interestRate' class='fieldName'>息率</label>
-              <input type='text' data-mini='true' class='fieldValue' id='interestRate' placeholder='息率' value = '2.5'>
+              <input type='number' data-mini='true' class='fieldValue' id='interestRate' placeholder='息率' value = '2.5'>
               <label class='fieldUnit'>%</label>
             </div>
           </li>
