Modify home page content

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <a class='ui-btn-right' data-role='button' data-transition='slide' href='#about'>About</a>
       </div>
       <div data-role='content'>
-        <a class='' data-role='button' data-transition='slide' href='#homeCalc'>樓宇按揭</a>
+        <a class='' data-transition='slide' href='#homeCalc'>
+          <div class='homeItem'>樓宇按揭</div>
+        </a>
+        <a class='' data-transition='slide' href='#homeCalc'>
+          <div class='homeItem'>樓宇按揭</div>
+        </a>
+        <a class='' data-transition='slide' href='#homeCalc'>
+          <div class='homeItem'>樓宇按揭</div>
+        </a>
       </div>
     </div>
     <div data-role='page' id='about'>
