--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div data-role='page' id='root'>
       <div data-role='header' class='homeHeader'>
         <h1>MCalc</h1>
-        <a class='ui-btn-right' data-role='button' data-transition='slide' href='#about'>About</a>
+        <!--<a class='ui-btn-right' data-role='button' data-transition='slide' href='#about'>About</a>-->
       </div>
       <div data-role='content'>
         <a class='' data-transition='slide' href='#homeCalc'>
           <div class='homeItem'>樓宇按揭</div>
         </a>
         <a class='' data-transition='slide' href='#homeCalc'>
-          <div class='homeItem'>樓宇按揭</div>
+          <div class='homeItem'>職業稅</div>
         </a>
         <a class='' data-transition='slide' href='#homeCalc'>
-          <div class='homeItem'>樓宇按揭</div>
+          <div class='homeItem'>水費計算</div>
         </a>
       </div>
     </div>
@@ -41,7 +41,7 @@
         <a data-icon='arrow-l' data-rel='back'>Home</a>
       </div>
       <div data-role='content'>
-        <ul data-role='listview' data-inset='true' id='calclist' class='homeCalc'>
+        <ul data-role='listview' data-inset='true' id='calclist' class=''>
           <li class='listRow'>
             <div data-role='fieldcontain'>
               <label for='priceValue' class='fieldName'>樓價</label>
